more features provided

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,29 +1,118 @@
-@article{wang2016force,
-	title={Force-amplifying n-robot transport system (force-ants) for cooperative planar manipulation without communication},
-	author={Wang, Zijian and Schwager, Mac},
-	journal={The International Journal of Robotics Research},
-	volume={35},
-	number={13},
-	pages={1564--1586},
-	year={2016},
-	publisher={SAGE Publications Sage UK: London, England}
+
+@article{leahy_control_2019,
+	title = {Control in belief space with temporal logic specifications using vision-based localization},
+	volume = {38},
+	issn = {0278-3649, 1741-3176},
+	url = {http://journals.sagepub.com/doi/10.1177/0278364919846340},
+	doi = {10.1177/0278364919846340},
+	abstract = {We present a solution for operating a vehicle without global positioning infrastructure while satisfying constraints on its temporal behavior, and on the uncertainty of its position estimate. The proposed solution is an end-toend framework for mapping an unknown environment using aerial vehicles, synthesizing a control policy for a ground vehicle in that environment, and using a quadrotor to localize the ground vehicle within the map while it executes its control policy. This vision-based localization is noisy, necessitating planning in the belief space of the ground robot. The ground robot’s mission is given using a language called Gaussian Distribution Temporal Logic (GDTL), an extension of Boolean logic that incorporates temporal evolution and noise mitigation directly into the task speciﬁcations. We use a sampling-based algorithm to generate a transition system in the belief space and use local feedback controllers to break the curse of history associated with belief space planning. To localize the vehicle, we build a high-resolution map of the environment by ﬂying a team of aerial vehicles in formation with sensor information provided by their onboard cameras. The control policy for the ground robot is synthesized under temporal and uncertainty constraints given the semantically labeled map. Then the ground robot can execute the control policy given pose estimates from a dedicated aerial robot that tracks and localizes the ground robot. The proposed method is validated using two quadrotors to build a map, followed by a two-wheeled ground robot and a quadrotor with a camera for ten successful experimental trials.},
+	language = {en},
+	number = {6},
+	urldate = {2020-07-06},
+	journal = {The International Journal of Robotics Research},
+	author = {Leahy, Kevin and Cristofalo, Eric and Vasile, Cristian-Ioan and Jones, Austin and Montijano, Eduardo and Schwager, Mac and Belta, Calin},
+	month = may,
+	year = {2019},
+	pages = {702--722}
 }
 
-@inproceedings{culbertson2018decentralized,
-	title={Decentralized adaptive control for collaborative manipulation},
-	author={Culbertson, Preston and Schwager, Mac},
-	booktitle={2018 IEEE International Conference on Robotics and Automation (ICRA)},
-	pages={278--285},
-	year={2018},
-	organization={IEEE}
+@inproceedings{wang_distributed_2019,
+	address = {New Brunswick, NJ, USA},
+	title = {Distributed {Collision} {Avoidance} of {Multiple} {Robots} with {Probabilistic} {Buffered} {Voronoi} {Cells}},
+	isbn = {978-1-72812-876-4},
+	url = {https://ieeexplore.ieee.org/document/8901101/},
+	doi = {10.1109/MRS.2019.8901101},
+	abstract = {This paper introduces Probabilistic Buffered Voronoi Cell (PBVC) collision avoidance for multiple robots using noisy on-board sensing. The work builds upon the previously proposed Buffered Voronoi Cell (BVC) approach. We introduce a probabilistic formulation to construct a family of BVCs with speciﬁed safety levels, which take into account uncertainty in sensor measurements among the robots. The safety level of a PBVC represents the probability that the area is contained inside the robot’s true (but unknown) BVC. The PBVC provides a set of probabilistically safe positions for the robot to navigate to. Each agent chooses its next position constrained within the PBVC of a desired safety level, while minimizing the deviation from its reference trajectory. We prove a conservative bound on the probability of collision given this reciprocal strategy. We also validate through simulations that the proposed approach achieves safe navigation among multiple robots in challenging scenarios, and provides a signiﬁcantly lower risk of collision than either the Reciprocal Velocity Obstacles (RVO) method or the Buffered Voronoi Cell (BVC) method when the robots use noisy relative measurements. We also show in experiments with small-scale robotic cars that the algorithm is fast, effective and is useful in real applications.},
+	language = {en},
+	urldate = {2020-07-06},
+	booktitle = {2019 {International} {Symposium} on {Multi}-{Robot} and {Multi}-{Agent} {Systems} ({MRS})},
+	publisher = {IEEE},
+	author = {Wang, Mingyu and Schwager, Mac},
+	month = aug,
+	year = {2019},
+	pages = {169--175}
 }
 
-@inproceedings{ola2020collab,
-	title={Scalable Collaborative Manipulation with Distributed Trajectory Planning},
-	author={Shorinwa, Ola and Schwager, Mac},
-	booktitle={Proceedings of IEEE/RSJ International Conference on Intelligent Robots and Systems. IROS'20},
-	volume={1},
-	pages={318--323},
-	year={2020},
-	organization={IEEE}
+@article{zhou_agile_2018,
+	title = {Agile {Coordination} and {Assistive} {Collision} {Avoidance} for {Quadrotor} {Swarms} {Using} {Virtual} {Structures}},
+	volume = {34},
+	issn = {1552-3098, 1941-0468},
+	url = {https://ieeexplore.ieee.org/document/8429106/},
+	doi = {10.1109/TRO.2018.2857477},
+	abstract = {This paper presents a method for controlling a swarm of quadrotors to perform agile interleaved maneuvers while holding a ﬁxed relative formation, or transitioning between different formations. The method prevents collisions within the swarm, as well as between the quadrotors and static obstacles in the environment. The method is built upon the existing notion of a Virtual Structure, which serves as a framework with which to plan and execute complex interleaved trajectories, and also gives a simple, intuitive interface for a single human operator to control an arbitrarily large aerial swarm in real time. The Virtual Structure concept is integrated with differential ﬂatnessbased feedback control to give an end-to-end integrated swarm tele-operation system. Collision avoidance is achieved by using multiple layered potential ﬁelds. Our method is demonstrated in hardware experiments with groups of 3–5 quadrotors teleoperated by a single human operator, and simulations of 200 quadrotors tele-operated by a single human operator.},
+	language = {en},
+	number = {4},
+	urldate = {2020-07-06},
+	journal = {IEEE Transactions on Robotics},
+	author = {Zhou, Dingjiang and Wang, Zijian and Schwager, Mac},
+	month = aug,
+	year = {2018},
+	pages = {916--923}
+}
+
+@article{vasile_translational_2018,
+	title = {Translational and {Rotational} {Invariance} in {Networked} {Dynamical} {Systems}},
+	volume = {5},
+	issn = {2325-5870, 2372-2533},
+	url = {https://ieeexplore.ieee.org/document/7805256/},
+	doi = {10.1109/TCNS.2017.2648499},
+	abstract = {In this paper, we study the translational and rotational (SE(N )) invariance properties of locally interacting multiagent systems. We focus on a class of networked dynamical systems, in which the agents have local pairwise interactions, and the overall effect of the interaction on each agent is the sum of the interactions with other agents. We show that such systems are SE(N )-invariant if and only if they have a special, quasilinear form. The SE(N )-invariance property, sometimes referred to as left invariance, is central to a large class of kinematic and robotic systems. When satisﬁed, it ensures independence to global reference frames. In an alternate interpretation, it allows for integration of dynamics and computation of control laws in the agents’ own reference frames. Such a property is essential in a large spectrum of applications, e.g., navigation in GPSdenied environments. Because of the simplicity of the quasi-linear form, this result can impact ongoing research on design of local interaction laws. It also gives a quick test to check if a given networked system is SE(N )-invariant.},
+	language = {en},
+	number = {3},
+	urldate = {2020-07-06},
+	journal = {IEEE Transactions on Control of Network Systems},
+	author = {Vasile, Cristian-Ioan and Schwager, Mac and Belta, Calin},
+	month = sep,
+	year = {2018},
+	pages = {822--832}
+}
+
+@inproceedings{montijano_distributed_2016,
+	address = {Stockholm},
+	title = {Distributed formation control of non-holonomic robots without a global reference frame},
+	isbn = {978-1-4673-8026-3},
+	url = {http://ieeexplore.ieee.org/document/7487734/},
+	doi = {10.1109/ICRA.2016.7487734},
+	abstract = {In this paper we consider the problem of controlling a team of non-holonomic robots to reach a desired formation. The formation is described in terms of the desired relative positions and orientations the robots need to keep with respect to each other, and it is assumed that the robots do not have a common shared reference frame. In other words, the robots can use only on-board sensing to achieve the formation. We ﬁrst consider a holonomic framework, using a well known distance-based approach to reach a formation for the positions. We then include a control law for the orientations. We further discuss the problem of mirror conﬁgurations that appear when different desired relative orientations can satisfy the same distance-based constraints through different formations. Exploiting the concept of chirality, we present a relabelling strategy to reassign the robots’ roles to reach the desired pattern when a mirror conﬁguration occurs. The distancebased holonomic control is then transformed to cope with the non-holonomic constraints using a piecewise-smooth function. Simulation results, as well as hardware experiments with ﬁve m3pi robots demonstrate the applicability of our approach.},
+	language = {en},
+	urldate = {2020-07-06},
+	booktitle = {2016 {IEEE} {International} {Conference} on {Robotics} and {Automation} ({ICRA})},
+	publisher = {IEEE},
+	author = {Montijano, Eduardo and Cristofalo, Eric and Schwager, Mac and Sagues, Carlos},
+	month = may,
+	year = {2016},
+	pages = {5248--5254}
+}
+
+@article{wang_multi-agent_2020,
+	title = {Multi-agent sensitivity enhanced iterative best response: {A} real-time game theoretic planner for drone racing in {3D} environments},
+	volume = {125},
+	issn = {09218890},
+	shorttitle = {Multi-agent sensitivity enhanced iterative best response},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0921889019301939},
+	doi = {10.1016/j.robot.2019.103410},
+	language = {en},
+	urldate = {2020-06-05},
+	journal = {Robotics and Autonomous Systems},
+	author = {Wang, Zijian and Taubner, Tim and Schwager, Mac},
+	month = mar,
+	year = {2020},
+	pages = {103410}
+}
+
+@article{haksar_spatial_2020,
+	title = {Spatial {Scheduling} of {Informative} {Meetings} for {Multi}-{Agent} {Persistent} {Coverage}},
+	volume = {5},
+	issn = {2377-3766, 2377-3774},
+	url = {https://ieeexplore.ieee.org/document/9001230/},
+	doi = {10.1109/LRA.2020.2974715},
+	abstract = {In this work, we develop a novel decentralized coordination algorithm for a team of autonomous unmanned aerial vehicles (UAVs) to surveil an aggressive forest wildﬁre. For dangerous environmental processes that occur over very large areas, like forest wildﬁres, multi-agent systems cannot rely on long-range communication networks. Therefore, our framework is formulated for very restrictive communication constraints: UAVs are only able to communicate when they are physically close to each other. To accommodate this constraint, the UAVs schedule a time and place to meet in the future to guarantee that they will be able to meet up again and share their belief of the wildﬁre state. In contrast with prior work, we allow for a discrete time, discrete space Markov model with a large state space as well as restrictive communication constraints. We demonstrate the effectiveness of our approach using simulations of a wildﬁre model that has 10298 total states.},
+	language = {en},
+	number = {2},
+	urldate = {2020-06-05},
+	journal = {IEEE Robotics and Automation Letters},
+	author = {Haksar, Ravi N. and Trimpe, Sebastian and Schwager, Mac},
+	month = apr,
+	year = {2020},
+	pages = {3027--3034}
 }
