fixed problems with style and added features to publications page

--- a/_bibliography/papers_pub.bib
+++ b/_bibliography/papers_pub.bib
@@ -6,6 +6,7 @@
 	number={13},
 	pages={1564--1586},
 	year={2016},
+	keywords={collaborative\_manipulation},
 	publisher={SAGE Publications Sage UK: London, England}
 }
 
@@ -15,6 +16,7 @@
 	booktitle={2018 IEEE International Conference on Robotics and Automation (ICRA)},
 	pages={278--285},
 	year={2018},
+	keywords={collaborative\_manipulation},
 	organization={IEEE}
 }
 
@@ -25,5 +27,17 @@
 	volume={1},
 	pages={318--323},
 	year={2020},
+	keywords={collaborative\_manipulation},
+	organization={IEEE}
+}
+
+@inproceedings{ola2020tracking,
+	title={Scalable Target Tracking for Autonomous Vehicle Fleets},
+	author={Shorinwa, Ola and Yu, Javier and Schwager, Mac},
+	booktitle={2020 IEEE International Conference on Robotics and Automation (ICRA)},
+	volume={1},
+	pages={228--235},
+	year={2020},
+	keywords={tracking},
 	organization={IEEE}
 }
